# FishNetStreamAnalyzer

./: .gitignore  README.md  RepoUpdate.py  StreamCapture.py  TODO  keras_model.h5  pyproject.toml  stream_capture.py
EmailDownloader/: EmailDownload.py
Gmail_API/: AddCredentials.txt  Download.py  credentials.json  token.json
Gmail_API/token files/: token_gmail_v1.pickle
clips/: clip10.h264  clip9.h264
clips/Deployment/: clip0_2023-03-08.h264  clip10_2023-03-09.h264  clip11_2023-03-09.h264  clip13_2023-03-09.h264  clip14_2023-03-09.h264  clip1_2023-03-08.h264  clip21_2023-03-10.h264  clip22_2023-03-10.h264  clip26_2023-03-10.h264  clip27_2023-03-10.h264  clip2_2023-03-08.h264  clip30_2023-03-11.h264  clip32_2023-03-11.h264  clip38_2023-03-11.h264  clip39_2023-03-11.h264  clip42_2023-03-12.h264  clip47_2023-03-12.h264  clip48_2023-03-12.h264  clip49_2023-03-12.h264  clip53_2023-03-13.h264  clip54_2023-03-13.h264  clip55_2023-03-13.h264  clip60_2023-03-14.h264  clip61_2023-03-14.h264  clip62_2023-03-14.h264  clip63_2023-03-14.h264  clip64_2023-03-14.h264  clip66_2023-03-14.h264  clip67_2023-03-14.h264
clips/Deployment1/: clip0_2023-03-07.h264  clip12_2023-03-09.h264  clip15_2023-03-09.h264  clip16_2023-03-09.h264  clip17_2023-03-09.h264  clip18_2023-03-09.h264  clip19_2023-03-09.h264  clip20_2023-03-10.h264  clip23_2023-03-10.h264  clip24_2023-03-10.h264  clip25_2023-03-10.h264  clip28_2023-03-10.h264  clip29_2023-03-10.h264  clip31_2023-03-11.h264  clip33_2023-03-11.h264  (+27 more)
freeze_model/: freeze_model.py
watchdog/: setup.py  testing.py  watchdog.py  watchdog.sh
(+6 files in other folders)
